--- a/android/app/src/main/assets/public/manifest.json
+++ b/android/app/src/main/assets/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ionic App",
-  "name": "My Ionic App",
+  "short_name": "Vịt Graduation",
+  "name": "Vịt Graduation",
   "icons": [
     {
       "src": "assets/icon/favicon.png",
