--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-simple-image-viewer": "^1.2.2",
     "typescript": "^4.1.3",
     "upload-js": "^1.37.2",
     "web-vitals": "^0.2.4",
